--- a/Service/LibraryManagementSystem.Service.csproj
+++ b/Service/LibraryManagementSystem.Service.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\LibraryManagementSystem.Entity.csproj" />
-    <ProjectReference Include="..\Entity\LibraryManagementSystem.Entity.csproj" />
+    <ProjectReference Include="..\Repository\LibraryManagementSystem.Repository.csproj" />
   </ItemGroup>
 
 </Project>
