temel end-pointler çıkıldı

--- a/LibraryManagementSystem.Api/appsettings.json
+++ b/LibraryManagementSystem.Api/appsettings.json
@@ -1,5 +1,7 @@
 {
-  "ConnectionStrings": { "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=LibraryManagementSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False" },
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=LibraryManagementSystem;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
