--- a/LibraryManagementSystem.Api/appsettings.json
+++ b/LibraryManagementSystem.Api/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Token": {
+    "Issuer": "www.myapi.com",
+    "Audience": "www.taner.com",
+    "SecurityKey": "Benim şifreli anahtarım bu olacak.",
+    "Expiration": 60
+  }
 }
